--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
 DB_CNN=mongodb+srv://crisdev:PRdCJK7H_S2eNrm@cluster0.uvmnfsn.mongodb.net/hospitaldb
 JWT_SECRET=234234$$%%@@@@213asd
-# Identifica al cliente
+# Identifica al cliente, este sirve para generar token
 GOOGLE_ID=885119507257-a5p2kp2l2o3p3abaceebmm3300olqt81.apps.googleusercontent.com
 # Llave secreta que sirve para validar el token del lado del backend
 GOOGLE_SECRET=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
